Bug 15302 - log flood: smbd_calculate_access_mask_fsp: Access denied: message level should be lower
Summary: log flood: smbd_calculate_access_mask_fsp: Access denied: message level shoul...
Status: RESOLVED FIXED
Alias: None
Product: Samba 4.1 and newer
Classification: Unclassified
Component: File services (show other bugs)
Version: 4.17.1
Hardware: All All
: P5 normal (vote)
Target Milestone: ---
Assignee: Jule Anger
QA Contact: Samba QA Contact
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2023-02-07 21:04 UTC by Michael Tokarev
Modified: 2023-05-11 07:10 UTC (History)
1 user (show)

See Also:


Attachments
Patch for the issue changing DBG_ERR to DBG_DEBUG (1.29 KB, patch)
2023-02-07 21:04 UTC, Michael Tokarev
no flags Details
git-am fix for 4.18.rcNext, 4.17.next. (1.29 KB, patch)
2023-02-11 20:10 UTC, Jeremy Allison
slow: review+
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Michael Tokarev 2023-02-07 21:04:16 UTC
Created attachment 17751 [details]
Patch for the issue changing DBG_ERR to DBG_DEBUG

Currently, source3/smbd/open.c:3392(smbd_calculate_access_mask_fsp) logs this message with priority ERROR:
 smbd_calculate_access_mask_fsp: Access denied on file %s: rejected by share access mask[0x%x] orig[0x%x] mapped[0x%x] reject[0x%x]

This should be info or debug instead, to prevent uncontrolled message floods.
Comment 1 Samba QA Contact 2023-02-11 08:49:06 UTC
This bug was referenced in samba master:

e8abe52df2d3ae533b3f874a885856f26ba5ec7e
Comment 2 Jeremy Allison 2023-02-11 20:10:04 UTC
Created attachment 17757 [details]
git-am fix for 4.18.rcNext, 4.17.next.

Cherry-picked from master.
Comment 3 Ralph Böhme 2023-04-11 13:37:03 UTC
Reassigning to Jule for inclusion in 4.17 and 4.18.
Comment 4 Jule Anger 2023-04-11 15:07:31 UTC
Pushed to autobuild-v4-{18,17}-test.
Comment 5 Samba QA Contact 2023-04-11 16:29:20 UTC
This bug was referenced in samba v4-17-test:

d7d81510c3855883ace3ce635a8797266a3c1ffe
Comment 6 Samba QA Contact 2023-04-11 16:31:19 UTC
This bug was referenced in samba v4-18-test:

188d598c1d8cf3067c26ddb50ef13c511e67d6ae
Comment 7 Jule Anger 2023-04-14 12:13:50 UTC
Closing out bug report.

Thanks!
Comment 8 Samba QA Contact 2023-04-19 10:22:51 UTC
This bug was referenced in samba v4-18-stable (Release samba-4.18.2):

188d598c1d8cf3067c26ddb50ef13c511e67d6ae
Comment 9 Samba QA Contact 2023-05-11 07:10:07 UTC
This bug was referenced in samba v4-17-stable (Release samba-4.17.8):

d7d81510c3855883ace3ce635a8797266a3c1ffe