source3/smbd/open.c
@@ -3389,7 +3389,7 @@ NTSTATUS smbd_calculate_access_mask_fsp(struct files_struct *dirfsp,
 	rejected_share_access = access_mask & ~(fsp->conn->share_access);
 
 	if (rejected_share_access) {
-		DBG_ERR("Access denied on file %s: "
+		DBG_INFO("Access denied on file %s: "
 			"rejected by share access mask[0x%08X] "
 			"orig[0x%08X] mapped[0x%08X] reject[0x%08X]\n",
 			fsp_str_dbg(fsp),
